# contemporary-rs

./: Cargo.toml  publish-all.sh
.github/workflows/: release.yml
cntp_config/: Cargo.toml
cntp_config/src/: blueprint_auto_detection.rs  config.rs  lib.rs
cntp_macros/: Cargo.toml
contemporary/: Cargo.toml
contemporary/src/: about_surface.rs  debug_log.rs  lib.rs  settings.rs  setup.rs
contemporary/src/components/: application_menu.rs  pager.rs  scrollbar.rs
contemporary/src/jobs/: job_button.rs
contemporary/src/settings/: error.rs
contemporary/src/tracing/: application_log.rs  application_log_entry.rs  layer.rs
contemporary/translations/: en.json  meta.json
deploy_tool/cargo_cntp_bundle/: Cargo.toml
deploy_tool/cargo_cntp_bundle/src/: main.rs
deploy_tool/cargo_cntp_deploy/: Cargo.toml
deploy_tool/cntp_bundle_lib/: Cargo.toml
deploy_tool/cntp_bundle_lib/src/: linux.rs
i18n/cargo_cntp_i18n/: Cargo.toml
i18n/cntp_i18n/: Cargo.toml
i18n/cntp_i18n/src/: lib.rs
i18n/cntp_i18n_build_core/: Cargo.toml
i18n/cntp_i18n_core/: Cargo.toml
i18n/cntp_i18n_gen/: Cargo.toml
i18n/cntp_i18n_macros/: Cargo.toml
i18n/cntp_i18n_parlance_source/: Cargo.toml
i18n/cntp_i18n_parlance_source/src/: lib.rs  parse_raw_string.rs
i18n/cntp_i18n_parse/: Cargo.toml
icon_tool/cntp_icon_tool_core/: Cargo.toml
icon_tool/cntp_icon_tool_macros/: Cargo.toml
localesupport/cntp_localesupport/: Cargo.toml
localesupport/cntp_localesupport/src/: lib.rs  (+3 more)
playground/: Cargo.toml  Contemporary.toml
playground/src/: main.rs
playground/translations/: meta.json
(+16 files in other folders)
